fix: check fix5 scroll on mobile

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -41,7 +41,7 @@ button {
 
 img {
   max-width: 100%;
-  /* height: auto; */
+  height: auto;
   display: block;
 }
 
